--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: white;
   color: black;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .read-the-docs {
