--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .input_field {
@@ -9,11 +9,11 @@
 }
 
 a {
-    border-bottom: 1px solid blue;
+  border-bottom: 1px solid blue;
 }
 
 h1 {
-    margin-top: 3vh;
+  margin-top: 3vh;
 }
 
 .input_field_links {
@@ -28,8 +28,19 @@ h1 {
 
 .info_DOM,
 .links_DOM {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5vh;
+}
+
+.edit_button_general {
+  max-width: 4.5rem;
+  max-height: 2.5rem;
+  position: absolute;
+  top: 10%;
+  left: 90%;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(150, 0, 0, 0.5);
 }
